parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> P
Rule 1     P -> program id VARIABLES SUBROUTINES STATEMENTS end program
Rule 2     VARIABLES -> TYPE id ARRAY semicolon VARIABLES
Rule 3     VARIABLES -> <empty>
Rule 4     TYPE -> integer
Rule 5     TYPE -> real
Rule 6     ARRAY -> openBracket int closeBracket openBracket int closeBracket
Rule 7     ARRAY -> openBracket int closeBracket
Rule 8     ARRAY -> <empty>
Rule 9     SUBROUTINES -> subroutine id STATEMENTS end subroutine SUBROUTINES
Rule 10    SUBROUTINES -> <empty>
Rule 11    STATEMENTS -> if LOGEXP then STATEMENTS ELIF ELSE end if
Rule 12    STATEMENTS -> do id equal ARITEXP semicolon STATEMENTS end do STATEMENTS
Rule 13    STATEMENTS -> VAR equal ARITEXP ACTION_GENERATE_QUADRUPLET_SET STATEMENTS
Rule 14    STATEMENTS -> call id semicolon STATEMENTS
Rule 15    STATEMENTS -> read READVAR semicolon STATEMENTS
Rule 16    STATEMENTS -> write WRITEVAR semicolon STATEMENTS
Rule 17    STATEMENTS -> exit STATEMENTS
Rule 18    STATEMENTS -> <empty>
Rule 19    ELIF -> elif LOGEXP then STATEMENTS ELIF
Rule 20    ELIF -> <empty>
Rule 21    ELSE -> else STATEMENTS
Rule 22    ELSE -> <empty>
Rule 23    LOGEXP -> ANDEXP ACTION_CREATE_QUADRUPLE_LOGEXP or ACTION_OR_LOGEXP LOGEXP
Rule 24    LOGEXP -> ANDEXP ACTION_CREATE_QUADRUPLE_LOGEXP
Rule 25    ANDEXP -> COMPARISON ACTION_GENERATE_QUADRUPLE_ANDEXP and ACTION_AND_ANDEXP ANDEXP
Rule 26    ANDEXP -> COMPARISON ACTION_GENERATE_QUADRUPLE_ANDEXP
Rule 27    COMPARISON -> openParentheses LOGEXP closeParentheses
Rule 28    COMPARISON -> VALUE COMP VALUE ACTION_GENERATE_QUADRUPLE_COMP_COMPARISON
Rule 29    COMPARISON -> not LOGEXP ACTION_GENERATE_QUADRUPLE_NOT_COMPARISON
Rule 30    COMP -> doubleEqual
Rule 31    COMP -> notEqual
Rule 32    COMP -> biggerOrEqualThan
Rule 33    COMP -> smallerOrEqualThan
Rule 34    COMP -> biggerThan
Rule 35    COMP -> smallerThan
Rule 36    READVAR -> VAR READV
Rule 37    READV -> coma VAR READV
Rule 38    READV -> <empty>
Rule 39    WRITEVAR -> VAR WRITEV
Rule 40    WRITEVAR -> string WRITEV
Rule 41    WRITEV -> coma VAR WRITEV
Rule 42    WRITEV -> coma string WRITEV
Rule 43    WRITEV -> <empty>
Rule 44    ARITEXP -> MULDIV
Rule 45    ARITEXP -> ARITEXP plusSign ACTION_PLUSSIGN_ARITEXP MULDIV ACTION_GENERATE_QUADRUPLET_ARITEXP
Rule 46    ARITEXP -> ARITEXP minusSign ACTION_MINUSSIGN_ARITEXP MULDIV ACTION_GENERATE_QUADRUPLET_ARITEXP
Rule 47    MULDIV -> VALUE
Rule 48    MULDIV -> MULDIV multSign ACTION_MULTSIGN_MULDIV VALUE ACTION_GENERATE_QUADRUPLET_MULDIV
Rule 49    MULDIV -> MULDIV divSign ACTION_DIVSIGN_MULDIV VALUE ACTION_GENERATE_QUADRUPLET_MULDIV
Rule 50    VALUE -> VAL
Rule 51    VALUE -> openParentheses ARITEXP closeParentheses
Rule 52    VAL -> VAR ACTION_VAR_VAL
Rule 53    VAL -> int ACTION_INT_VAL
Rule 54    VAL -> real ACTION_REAL_VAL
Rule 55    VAR -> id ARRAY
Rule 56    ACTION_VAR_VAL -> <empty>
Rule 57    ACTION_INT_VAL -> <empty>
Rule 58    ACTION_REAL_VAL -> <empty>
Rule 59    ACTION_PLUSSIGN_ARITEXP -> <empty>
Rule 60    ACTION_MINUSSIGN_ARITEXP -> <empty>
Rule 61    ACTION_GENERATE_QUADRUPLET_SET -> <empty>
Rule 62    ACTION_MULTSIGN_MULDIV -> <empty>
Rule 63    ACTION_DIVSIGN_MULDIV -> <empty>
Rule 64    ACTION_GENERATE_QUADRUPLET_ARITEXP -> <empty>
Rule 65    ACTION_GENERATE_QUADRUPLET_MULDIV -> <empty>
Rule 66    ACTION_OR_LOGEXP -> <empty>
Rule 67    ACTION_AND_ANDEXP -> <empty>
Rule 68    ACTION_CREATE_QUADRUPLE_LOGEXP -> <empty>
Rule 69    ACTION_GENERATE_QUADRUPLE_ANDEXP -> <empty>
Rule 70    ACTION_GENERATE_QUADRUPLE_COMP_COMPARISON -> <empty>
Rule 71    ACTION_GENERATE_QUADRUPLE_NOT_COMPARISON -> <empty>

Terminals, with rules where they appear

and                  : 25
biggerOrEqualThan    : 32
biggerThan           : 34
call                 : 14
closeBracket         : 6 6 7
closeParentheses     : 27 51
coma                 : 37 41 42
divSign              : 49
do                   : 12 12
doubleEqual          : 30
elif                 : 19
else                 : 21
end                  : 1 9 11 12
equal                : 12 13
error                : 
exit                 : 17
id                   : 1 2 9 12 14 55
if                   : 11 11
int                  : 6 6 7 53
integer              : 4
minusSign            : 46
multSign             : 48
not                  : 29
notEqual             : 31
openBracket          : 6 6 7
openParentheses      : 27 51
or                   : 23
plusSign             : 45
program              : 1 1
read                 : 15
real                 : 5 54
semicolon            : 2 12 14 15 16
smallerOrEqualThan   : 33
smallerThan          : 35
string               : 40 42
subroutine           : 9 9
then                 : 11 19
write                : 16

Nonterminals, with rules where they appear

ACTION_AND_ANDEXP    : 25
ACTION_CREATE_QUADRUPLE_LOGEXP : 23 24
ACTION_DIVSIGN_MULDIV : 49
ACTION_GENERATE_QUADRUPLET_ARITEXP : 45 46
ACTION_GENERATE_QUADRUPLET_MULDIV : 48 49
ACTION_GENERATE_QUADRUPLET_SET : 13
ACTION_GENERATE_QUADRUPLE_ANDEXP : 25 26
ACTION_GENERATE_QUADRUPLE_COMP_COMPARISON : 28
ACTION_GENERATE_QUADRUPLE_NOT_COMPARISON : 29
ACTION_INT_VAL       : 53
ACTION_MINUSSIGN_ARITEXP : 46
ACTION_MULTSIGN_MULDIV : 48
ACTION_OR_LOGEXP     : 23
ACTION_PLUSSIGN_ARITEXP : 45
ACTION_REAL_VAL      : 54
ACTION_VAR_VAL       : 52
ANDEXP               : 23 24 25
ARITEXP              : 12 13 45 46 51
ARRAY                : 2 55
COMP                 : 28
COMPARISON           : 25 26
ELIF                 : 11 19
ELSE                 : 11
LOGEXP               : 11 19 23 27 29
MULDIV               : 44 45 46 48 49
P                    : 0
READV                : 36 37
READVAR              : 15
STATEMENTS           : 1 9 11 12 12 13 14 15 16 17 19 21
SUBROUTINES          : 1 9
TYPE                 : 2
VAL                  : 50
VALUE                : 28 28 47 48 49
VAR                  : 13 36 37 39 41 52
VARIABLES            : 1 2
WRITEV               : 39 40 41 42
WRITEVAR             : 16

Parsing method: LALR

state 0

    (0) S' -> . P
    (1) P -> . program id VARIABLES SUBROUTINES STATEMENTS end program

    program         shift and go to state 2

    P                              shift and go to state 1

state 1

    (0) S' -> P .



state 2

    (1) P -> program . id VARIABLES SUBROUTINES STATEMENTS end program

    id              shift and go to state 3


state 3

    (1) P -> program id . VARIABLES SUBROUTINES STATEMENTS end program
    (2) VARIABLES -> . TYPE id ARRAY semicolon VARIABLES
    (3) VARIABLES -> .
    (4) TYPE -> . integer
    (5) TYPE -> . real

    subroutine      reduce using rule 3 (VARIABLES -> .)
    if              reduce using rule 3 (VARIABLES -> .)
    do              reduce using rule 3 (VARIABLES -> .)
    call            reduce using rule 3 (VARIABLES -> .)
    read            reduce using rule 3 (VARIABLES -> .)
    write           reduce using rule 3 (VARIABLES -> .)
    exit            reduce using rule 3 (VARIABLES -> .)
    id              reduce using rule 3 (VARIABLES -> .)
    end             reduce using rule 3 (VARIABLES -> .)
    integer         shift and go to state 6
    real            shift and go to state 7

    VARIABLES                      shift and go to state 4
    TYPE                           shift and go to state 5

state 4

    (1) P -> program id VARIABLES . SUBROUTINES STATEMENTS end program
    (9) SUBROUTINES -> . subroutine id STATEMENTS end subroutine SUBROUTINES
    (10) SUBROUTINES -> .

    subroutine      shift and go to state 9
    if              reduce using rule 10 (SUBROUTINES -> .)
    do              reduce using rule 10 (SUBROUTINES -> .)
    call            reduce using rule 10 (SUBROUTINES -> .)
    read            reduce using rule 10 (SUBROUTINES -> .)
    write           reduce using rule 10 (SUBROUTINES -> .)
    exit            reduce using rule 10 (SUBROUTINES -> .)
    id              reduce using rule 10 (SUBROUTINES -> .)
    end             reduce using rule 10 (SUBROUTINES -> .)

    SUBROUTINES                    shift and go to state 8

state 5

    (2) VARIABLES -> TYPE . id ARRAY semicolon VARIABLES

    id              shift and go to state 10


state 6

    (4) TYPE -> integer .

    id              reduce using rule 4 (TYPE -> integer .)


state 7

    (5) TYPE -> real .

    id              reduce using rule 5 (TYPE -> real .)


state 8

    (1) P -> program id VARIABLES SUBROUTINES . STATEMENTS end program
    (11) STATEMENTS -> . if LOGEXP then STATEMENTS ELIF ELSE end if
    (12) STATEMENTS -> . do id equal ARITEXP semicolon STATEMENTS end do STATEMENTS
    (13) STATEMENTS -> . VAR equal ARITEXP ACTION_GENERATE_QUADRUPLET_SET STATEMENTS
    (14) STATEMENTS -> . call id semicolon STATEMENTS
    (15) STATEMENTS -> . read READVAR semicolon STATEMENTS
    (16) STATEMENTS -> . write WRITEVAR semicolon STATEMENTS
    (17) STATEMENTS -> . exit STATEMENTS
    (18) STATEMENTS -> .
    (55) VAR -> . id ARRAY

    if              shift and go to state 13
    do              shift and go to state 14
    call            shift and go to state 16
    read            shift and go to state 17
    write           shift and go to state 18
    exit            shift and go to state 19
    end             reduce using rule 18 (STATEMENTS -> .)
    id              shift and go to state 11

    STATEMENTS                     shift and go to state 12
    VAR                            shift and go to state 15

state 9

    (9) SUBROUTINES -> subroutine . id STATEMENTS end subroutine SUBROUTINES

    id              shift and go to state 20


state 10

    (2) VARIABLES -> TYPE id . ARRAY semicolon VARIABLES
    (6) ARRAY -> . openBracket int closeBracket openBracket int closeBracket
    (7) ARRAY -> . openBracket int closeBracket
    (8) ARRAY -> .

    openBracket     shift and go to state 22
    semicolon       reduce using rule 8 (ARRAY -> .)

    ARRAY                          shift and go to state 21

state 11

    (55) VAR -> id . ARRAY
    (6) ARRAY -> . openBracket int closeBracket openBracket int closeBracket
    (7) ARRAY -> . openBracket int closeBracket
    (8) ARRAY -> .

    openBracket     shift and go to state 22
    equal           reduce using rule 8 (ARRAY -> .)
    doubleEqual     reduce using rule 8 (ARRAY -> .)
    notEqual        reduce using rule 8 (ARRAY -> .)
    biggerOrEqualThan reduce using rule 8 (ARRAY -> .)
    smallerOrEqualThan reduce using rule 8 (ARRAY -> .)
    biggerThan      reduce using rule 8 (ARRAY -> .)
    smallerThan     reduce using rule 8 (ARRAY -> .)
    coma            reduce using rule 8 (ARRAY -> .)
    semicolon       reduce using rule 8 (ARRAY -> .)
    multSign        reduce using rule 8 (ARRAY -> .)
    divSign         reduce using rule 8 (ARRAY -> .)
    closeParentheses reduce using rule 8 (ARRAY -> .)
    plusSign        reduce using rule 8 (ARRAY -> .)
    minusSign       reduce using rule 8 (ARRAY -> .)
    if              reduce using rule 8 (ARRAY -> .)
    do              reduce using rule 8 (ARRAY -> .)
    call            reduce using rule 8 (ARRAY -> .)
    read            reduce using rule 8 (ARRAY -> .)
    write           reduce using rule 8 (ARRAY -> .)
    exit            reduce using rule 8 (ARRAY -> .)
    id              reduce using rule 8 (ARRAY -> .)
    end             reduce using rule 8 (ARRAY -> .)
    elif            reduce using rule 8 (ARRAY -> .)
    else            reduce using rule 8 (ARRAY -> .)
    and             reduce using rule 8 (ARRAY -> .)
    or              reduce using rule 8 (ARRAY -> .)
    then            reduce using rule 8 (ARRAY -> .)

    ARRAY                          shift and go to state 23

state 12

    (1) P -> program id VARIABLES SUBROUTINES STATEMENTS . end program

    end             shift and go to state 24


state 13

    (11) STATEMENTS -> if . LOGEXP then STATEMENTS ELIF ELSE end if
    (23) LOGEXP -> . ANDEXP ACTION_CREATE_QUADRUPLE_LOGEXP or ACTION_OR_LOGEXP LOGEXP
    (24) LOGEXP -> . ANDEXP ACTION_CREATE_QUADRUPLE_LOGEXP
    (25) ANDEXP -> . COMPARISON ACTION_GENERATE_QUADRUPLE_ANDEXP and ACTION_AND_ANDEXP ANDEXP
    (26) ANDEXP -> . COMPARISON ACTION_GENERATE_QUADRUPLE_ANDEXP
    (27) COMPARISON -> . openParentheses LOGEXP closeParentheses
    (28) COMPARISON -> . VALUE COMP VALUE ACTION_GENERATE_QUADRUPLE_COMP_COMPARISON
    (29) COMPARISON -> . not LOGEXP ACTION_GENERATE_QUADRUPLE_NOT_COMPARISON
    (50) VALUE -> . VAL
    (51) VALUE -> . openParentheses ARITEXP closeParentheses
    (52) VAL -> . VAR ACTION_VAR_VAL
    (53) VAL -> . int ACTION_INT_VAL
    (54) VAL -> . real ACTION_REAL_VAL
    (55) VAR -> . id ARRAY

    openParentheses shift and go to state 28
    not             shift and go to state 30
    int             shift and go to state 33
    real            shift and go to state 34
    id              shift and go to state 11

    LOGEXP                         shift and go to state 25
    ANDEXP                         shift and go to state 26
    COMPARISON                     shift and go to state 27
    VALUE                          shift and go to state 29
    VAL                            shift and go to state 31
    VAR                            shift and go to state 32

state 14

    (12) STATEMENTS -> do . id equal ARITEXP semicolon STATEMENTS end do STATEMENTS

    id              shift and go to state 35


state 15

    (13) STATEMENTS -> VAR . equal ARITEXP ACTION_GENERATE_QUADRUPLET_SET STATEMENTS

    equal           shift and go to state 36


state 16

    (14) STATEMENTS -> call . id semicolon STATEMENTS

    id              shift and go to state 37


state 17

    (15) STATEMENTS -> read . READVAR semicolon STATEMENTS
    (36) READVAR -> . VAR READV
    (55) VAR -> . id ARRAY

    id              shift and go to state 11

    READVAR                        shift and go to state 38
    VAR                            shift and go to state 39

state 18

    (16) STATEMENTS -> write . WRITEVAR semicolon STATEMENTS
    (39) WRITEVAR -> . VAR WRITEV
    (40) WRITEVAR -> . string WRITEV
    (55) VAR -> . id ARRAY

    string          shift and go to state 42
    id              shift and go to state 11

    WRITEVAR                       shift and go to state 40
    VAR                            shift and go to state 41

state 19

    (17) STATEMENTS -> exit . STATEMENTS
    (11) STATEMENTS -> . if LOGEXP then STATEMENTS ELIF ELSE end if
    (12) STATEMENTS -> . do id equal ARITEXP semicolon STATEMENTS end do STATEMENTS
    (13) STATEMENTS -> . VAR equal ARITEXP ACTION_GENERATE_QUADRUPLET_SET STATEMENTS
    (14) STATEMENTS -> . call id semicolon STATEMENTS
    (15) STATEMENTS -> . read READVAR semicolon STATEMENTS
    (16) STATEMENTS -> . write WRITEVAR semicolon STATEMENTS
    (17) STATEMENTS -> . exit STATEMENTS
    (18) STATEMENTS -> .
    (55) VAR -> . id ARRAY

    if              shift and go to state 13
    do              shift and go to state 14
    call            shift and go to state 16
    read            shift and go to state 17
    write           shift and go to state 18
    exit            shift and go to state 19
    end             reduce using rule 18 (STATEMENTS -> .)
    elif            reduce using rule 18 (STATEMENTS -> .)
    else            reduce using rule 18 (STATEMENTS -> .)
    id              shift and go to state 11

    STATEMENTS                     shift and go to state 43
    VAR                            shift and go to state 15

state 20

    (9) SUBROUTINES -> subroutine id . STATEMENTS end subroutine SUBROUTINES
    (11) STATEMENTS -> . if LOGEXP then STATEMENTS ELIF ELSE end if
    (12) STATEMENTS -> . do id equal ARITEXP semicolon STATEMENTS end do STATEMENTS
    (13) STATEMENTS -> . VAR equal ARITEXP ACTION_GENERATE_QUADRUPLET_SET STATEMENTS
    (14) STATEMENTS -> . call id semicolon STATEMENTS
    (15) STATEMENTS -> . read READVAR semicolon STATEMENTS
    (16) STATEMENTS -> . write WRITEVAR semicolon STATEMENTS
    (17) STATEMENTS -> . exit STATEMENTS
    (18) STATEMENTS -> .
    (55) VAR -> . id ARRAY

    if              shift and go to state 13
    do              shift and go to state 14
    call            shift and go to state 16
    read            shift and go to state 17
    write           shift and go to state 18
    exit            shift and go to state 19
    end             reduce using rule 18 (STATEMENTS -> .)
    id              shift and go to state 11

    STATEMENTS                     shift and go to state 44
    VAR                            shift and go to state 15

state 21

    (2) VARIABLES -> TYPE id ARRAY . semicolon VARIABLES

    semicolon       shift and go to state 45


state 22

    (6) ARRAY -> openBracket . int closeBracket openBracket int closeBracket
    (7) ARRAY -> openBracket . int closeBracket

    int             shift and go to state 46


state 23

    (55) VAR -> id ARRAY .

    equal           reduce using rule 55 (VAR -> id ARRAY .)
    doubleEqual     reduce using rule 55 (VAR -> id ARRAY .)
    notEqual        reduce using rule 55 (VAR -> id ARRAY .)
    biggerOrEqualThan reduce using rule 55 (VAR -> id ARRAY .)
    smallerOrEqualThan reduce using rule 55 (VAR -> id ARRAY .)
    biggerThan      reduce using rule 55 (VAR -> id ARRAY .)
    smallerThan     reduce using rule 55 (VAR -> id ARRAY .)
    coma            reduce using rule 55 (VAR -> id ARRAY .)
    semicolon       reduce using rule 55 (VAR -> id ARRAY .)
    multSign        reduce using rule 55 (VAR -> id ARRAY .)
    divSign         reduce using rule 55 (VAR -> id ARRAY .)
    closeParentheses reduce using rule 55 (VAR -> id ARRAY .)
    plusSign        reduce using rule 55 (VAR -> id ARRAY .)
    minusSign       reduce using rule 55 (VAR -> id ARRAY .)
    if              reduce using rule 55 (VAR -> id ARRAY .)
    do              reduce using rule 55 (VAR -> id ARRAY .)
    call            reduce using rule 55 (VAR -> id ARRAY .)
    read            reduce using rule 55 (VAR -> id ARRAY .)
    write           reduce using rule 55 (VAR -> id ARRAY .)
    exit            reduce using rule 55 (VAR -> id ARRAY .)
    id              reduce using rule 55 (VAR -> id ARRAY .)
    end             reduce using rule 55 (VAR -> id ARRAY .)
    elif            reduce using rule 55 (VAR -> id ARRAY .)
    else            reduce using rule 55 (VAR -> id ARRAY .)
    and             reduce using rule 55 (VAR -> id ARRAY .)
    or              reduce using rule 55 (VAR -> id ARRAY .)
    then            reduce using rule 55 (VAR -> id ARRAY .)


state 24

    (1) P -> program id VARIABLES SUBROUTINES STATEMENTS end . program

    program         shift and go to state 47


state 25

    (11) STATEMENTS -> if LOGEXP . then STATEMENTS ELIF ELSE end if

    then            shift and go to state 48


state 26

    (23) LOGEXP -> ANDEXP . ACTION_CREATE_QUADRUPLE_LOGEXP or ACTION_OR_LOGEXP LOGEXP
    (24) LOGEXP -> ANDEXP . ACTION_CREATE_QUADRUPLE_LOGEXP
    (68) ACTION_CREATE_QUADRUPLE_LOGEXP -> .

    or              reduce using rule 68 (ACTION_CREATE_QUADRUPLE_LOGEXP -> .)
    then            reduce using rule 68 (ACTION_CREATE_QUADRUPLE_LOGEXP -> .)
    closeParentheses reduce using rule 68 (ACTION_CREATE_QUADRUPLE_LOGEXP -> .)
    and             reduce using rule 68 (ACTION_CREATE_QUADRUPLE_LOGEXP -> .)

    ACTION_CREATE_QUADRUPLE_LOGEXP shift and go to state 49

state 27

    (25) ANDEXP -> COMPARISON . ACTION_GENERATE_QUADRUPLE_ANDEXP and ACTION_AND_ANDEXP ANDEXP
    (26) ANDEXP -> COMPARISON . ACTION_GENERATE_QUADRUPLE_ANDEXP
    (69) ACTION_GENERATE_QUADRUPLE_ANDEXP -> .

    and             reduce using rule 69 (ACTION_GENERATE_QUADRUPLE_ANDEXP -> .)
    or              reduce using rule 69 (ACTION_GENERATE_QUADRUPLE_ANDEXP -> .)
    then            reduce using rule 69 (ACTION_GENERATE_QUADRUPLE_ANDEXP -> .)
    closeParentheses reduce using rule 69 (ACTION_GENERATE_QUADRUPLE_ANDEXP -> .)

    ACTION_GENERATE_QUADRUPLE_ANDEXP shift and go to state 50

state 28

    (27) COMPARISON -> openParentheses . LOGEXP closeParentheses
    (51) VALUE -> openParentheses . ARITEXP closeParentheses
    (23) LOGEXP -> . ANDEXP ACTION_CREATE_QUADRUPLE_LOGEXP or ACTION_OR_LOGEXP LOGEXP
    (24) LOGEXP -> . ANDEXP ACTION_CREATE_QUADRUPLE_LOGEXP
    (44) ARITEXP -> . MULDIV
    (45) ARITEXP -> . ARITEXP plusSign ACTION_PLUSSIGN_ARITEXP MULDIV ACTION_GENERATE_QUADRUPLET_ARITEXP
    (46) ARITEXP -> . ARITEXP minusSign ACTION_MINUSSIGN_ARITEXP MULDIV ACTION_GENERATE_QUADRUPLET_ARITEXP
    (25) ANDEXP -> . COMPARISON ACTION_GENERATE_QUADRUPLE_ANDEXP and ACTION_AND_ANDEXP ANDEXP
    (26) ANDEXP -> . COMPARISON ACTION_GENERATE_QUADRUPLE_ANDEXP
    (47) MULDIV -> . VALUE
    (48) MULDIV -> . MULDIV multSign ACTION_MULTSIGN_MULDIV VALUE ACTION_GENERATE_QUADRUPLET_MULDIV
    (49) MULDIV -> . MULDIV divSign ACTION_DIVSIGN_MULDIV VALUE ACTION_GENERATE_QUADRUPLET_MULDIV
    (27) COMPARISON -> . openParentheses LOGEXP closeParentheses
    (28) COMPARISON -> . VALUE COMP VALUE ACTION_GENERATE_QUADRUPLE_COMP_COMPARISON
    (29) COMPARISON -> . not LOGEXP ACTION_GENERATE_QUADRUPLE_NOT_COMPARISON
    (50) VALUE -> . VAL
    (51) VALUE -> . openParentheses ARITEXP closeParentheses
    (52) VAL -> . VAR ACTION_VAR_VAL
    (53) VAL -> . int ACTION_INT_VAL
    (54) VAL -> . real ACTION_REAL_VAL
    (55) VAR -> . id ARRAY

    openParentheses shift and go to state 28
    not             shift and go to state 30
    int             shift and go to state 33
    real            shift and go to state 34
    id              shift and go to state 11

    LOGEXP                         shift and go to state 51
    ARITEXP                        shift and go to state 52
    ANDEXP                         shift and go to state 26
    MULDIV                         shift and go to state 53
    COMPARISON                     shift and go to state 27
    VALUE                          shift and go to state 54
    VAL                            shift and go to state 31
    VAR                            shift and go to state 32

state 29

    (28) COMPARISON -> VALUE . COMP VALUE ACTION_GENERATE_QUADRUPLE_COMP_COMPARISON
    (30) COMP -> . doubleEqual
    (31) COMP -> . notEqual
    (32) COMP -> . biggerOrEqualThan
    (33) COMP -> . smallerOrEqualThan
    (34) COMP -> . biggerThan
    (35) COMP -> . smallerThan

    doubleEqual     shift and go to state 56
    notEqual        shift and go to state 57
    biggerOrEqualThan shift and go to state 58
    smallerOrEqualThan shift and go to state 59
    biggerThan      shift and go to state 60
    smallerThan     shift and go to state 61

    COMP                           shift and go to state 55

state 30

    (29) COMPARISON -> not . LOGEXP ACTION_GENERATE_QUADRUPLE_NOT_COMPARISON
    (23) LOGEXP -> . ANDEXP ACTION_CREATE_QUADRUPLE_LOGEXP or ACTION_OR_LOGEXP LOGEXP
    (24) LOGEXP -> . ANDEXP ACTION_CREATE_QUADRUPLE_LOGEXP
    (25) ANDEXP -> . COMPARISON ACTION_GENERATE_QUADRUPLE_ANDEXP and ACTION_AND_ANDEXP ANDEXP
    (26) ANDEXP -> . COMPARISON ACTION_GENERATE_QUADRUPLE_ANDEXP
    (27) COMPARISON -> . openParentheses LOGEXP closeParentheses
    (28) COMPARISON -> . VALUE COMP VALUE ACTION_GENERATE_QUADRUPLE_COMP_COMPARISON
    (29) COMPARISON -> . not LOGEXP ACTION_GENERATE_QUADRUPLE_NOT_COMPARISON
    (50) VALUE -> . VAL
    (51) VALUE -> . openParentheses ARITEXP closeParentheses
    (52) VAL -> . VAR ACTION_VAR_VAL
    (53) VAL -> . int ACTION_INT_VAL
    (54) VAL -> . real ACTION_REAL_VAL
    (55) VAR -> . id ARRAY

    openParentheses shift and go to state 28
    not             shift and go to state 30
    int             shift and go to state 33
    real            shift and go to state 34
    id              shift and go to state 11

    LOGEXP                         shift and go to state 62
    ANDEXP                         shift and go to state 26
    COMPARISON                     shift and go to state 27
    VALUE                          shift and go to state 29
    VAL                            shift and go to state 31
    VAR                            shift and go to state 32

state 31

    (50) VALUE -> VAL .

    doubleEqual     reduce using rule 50 (VALUE -> VAL .)
    notEqual        reduce using rule 50 (VALUE -> VAL .)
    biggerOrEqualThan reduce using rule 50 (VALUE -> VAL .)
    smallerOrEqualThan reduce using rule 50 (VALUE -> VAL .)
    biggerThan      reduce using rule 50 (VALUE -> VAL .)
    smallerThan     reduce using rule 50 (VALUE -> VAL .)
    multSign        reduce using rule 50 (VALUE -> VAL .)
    divSign         reduce using rule 50 (VALUE -> VAL .)
    closeParentheses reduce using rule 50 (VALUE -> VAL .)
    plusSign        reduce using rule 50 (VALUE -> VAL .)
    minusSign       reduce using rule 50 (VALUE -> VAL .)
    if              reduce using rule 50 (VALUE -> VAL .)
    do              reduce using rule 50 (VALUE -> VAL .)
    call            reduce using rule 50 (VALUE -> VAL .)
    read            reduce using rule 50 (VALUE -> VAL .)
    write           reduce using rule 50 (VALUE -> VAL .)
    exit            reduce using rule 50 (VALUE -> VAL .)
    id              reduce using rule 50 (VALUE -> VAL .)
    end             reduce using rule 50 (VALUE -> VAL .)
    elif            reduce using rule 50 (VALUE -> VAL .)
    else            reduce using rule 50 (VALUE -> VAL .)
    and             reduce using rule 50 (VALUE -> VAL .)
    or              reduce using rule 50 (VALUE -> VAL .)
    then            reduce using rule 50 (VALUE -> VAL .)
    semicolon       reduce using rule 50 (VALUE -> VAL .)


state 32

    (52) VAL -> VAR . ACTION_VAR_VAL
    (56) ACTION_VAR_VAL -> .

    doubleEqual     reduce using rule 56 (ACTION_VAR_VAL -> .)
    notEqual        reduce using rule 56 (ACTION_VAR_VAL -> .)
    biggerOrEqualThan reduce using rule 56 (ACTION_VAR_VAL -> .)
    smallerOrEqualThan reduce using rule 56 (ACTION_VAR_VAL -> .)
    biggerThan      reduce using rule 56 (ACTION_VAR_VAL -> .)
    smallerThan     reduce using rule 56 (ACTION_VAR_VAL -> .)
    multSign        reduce using rule 56 (ACTION_VAR_VAL -> .)
    divSign         reduce using rule 56 (ACTION_VAR_VAL -> .)
    closeParentheses reduce using rule 56 (ACTION_VAR_VAL -> .)
    plusSign        reduce using rule 56 (ACTION_VAR_VAL -> .)
    minusSign       reduce using rule 56 (ACTION_VAR_VAL -> .)
    if              reduce using rule 56 (ACTION_VAR_VAL -> .)
    do              reduce using rule 56 (ACTION_VAR_VAL -> .)
    call            reduce using rule 56 (ACTION_VAR_VAL -> .)
    read            reduce using rule 56 (ACTION_VAR_VAL -> .)
    write           reduce using rule 56 (ACTION_VAR_VAL -> .)
    exit            reduce using rule 56 (ACTION_VAR_VAL -> .)
    id              reduce using rule 56 (ACTION_VAR_VAL -> .)
    end             reduce using rule 56 (ACTION_VAR_VAL -> .)
    elif            reduce using rule 56 (ACTION_VAR_VAL -> .)
    else            reduce using rule 56 (ACTION_VAR_VAL -> .)
    and             reduce using rule 56 (ACTION_VAR_VAL -> .)
    or              reduce using rule 56 (ACTION_VAR_VAL -> .)
    then            reduce using rule 56 (ACTION_VAR_VAL -> .)
    semicolon       reduce using rule 56 (ACTION_VAR_VAL -> .)

    ACTION_VAR_VAL                 shift and go to state 63

state 33

    (53) VAL -> int . ACTION_INT_VAL
    (57) ACTION_INT_VAL -> .

    doubleEqual     reduce using rule 57 (ACTION_INT_VAL -> .)
    notEqual        reduce using rule 57 (ACTION_INT_VAL -> .)
    biggerOrEqualThan reduce using rule 57 (ACTION_INT_VAL -> .)
    smallerOrEqualThan reduce using rule 57 (ACTION_INT_VAL -> .)
    biggerThan      reduce using rule 57 (ACTION_INT_VAL -> .)
    smallerThan     reduce using rule 57 (ACTION_INT_VAL -> .)
    multSign        reduce using rule 57 (ACTION_INT_VAL -> .)
    divSign         reduce using rule 57 (ACTION_INT_VAL -> .)
    closeParentheses reduce using rule 57 (ACTION_INT_VAL -> .)
    plusSign        reduce using rule 57 (ACTION_INT_VAL -> .)
    minusSign       reduce using rule 57 (ACTION_INT_VAL -> .)
    if              reduce using rule 57 (ACTION_INT_VAL -> .)
    do              reduce using rule 57 (ACTION_INT_VAL -> .)
    call            reduce using rule 57 (ACTION_INT_VAL -> .)
    read            reduce using rule 57 (ACTION_INT_VAL -> .)
    write           reduce using rule 57 (ACTION_INT_VAL -> .)
    exit            reduce using rule 57 (ACTION_INT_VAL -> .)
    id              reduce using rule 57 (ACTION_INT_VAL -> .)
    end             reduce using rule 57 (ACTION_INT_VAL -> .)
    elif            reduce using rule 57 (ACTION_INT_VAL -> .)
    else            reduce using rule 57 (ACTION_INT_VAL -> .)
    and             reduce using rule 57 (ACTION_INT_VAL -> .)
    or              reduce using rule 57 (ACTION_INT_VAL -> .)
    then            reduce using rule 57 (ACTION_INT_VAL -> .)
    semicolon       reduce using rule 57 (ACTION_INT_VAL -> .)

    ACTION_INT_VAL                 shift and go to state 64

state 34

    (54) VAL -> real . ACTION_REAL_VAL
    (58) ACTION_REAL_VAL -> .
